objects/POV_eStar_Lineitem__c.object
<CustomObject>
    <fields>
        <fullName>Configurator_Status__c</fullName>
        <label>Configurator Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Price__c</fullName>
        <label>Ext. Price($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Path__c</fullName>
        <label>Item Path</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordrered_Quantity__c</fullName>
        <label>Ordrered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ostatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ostatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Value__c</fullName>
        <description>Proof of Value</description>
        <inlineHelpText>Proof of Value</inlineHelpText>
        <label>Proof of Value</label>
        <referenceTo>Proof_of_Value__c</referenceTo>
        <relationshipLabel>POV eStar Lineitems</relationshipLabel>
        <relationshipName>POV_eStar_Lineitems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Set_Number__c</fullName>
        <label>Ship Set Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_List_Price__c</fullName>
        <label>Unit List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>POV eStar Lineitem</description>
    <label>POV eStar Lineitem</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POV eStar Lineitems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Configurator_Status__c</columns>
        <columns>Ext_Price__c</columns>
        <columns>Item_Path__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Ordrered_Quantity__c</columns>
        <columns>Ostatus__c</columns>
        <columns>Proof_of_Value__c</columns>
        <columns>Ship_Set_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>